Translate2 - Org/src/objects/LeadIndex__c.object
<CustomObject>
    <description>予約インデックス情報を格納する</description>
    <fields>
        <fullName>AutoCreateFlgCbl__c</fullName>
        <defaultValue>true</defaultValue>
        <description>予約データの作成に従って、自動作成フラグFALSEに設定すると、トリガーの予約自動作成機能をスキップする</description>
        <label>自動作成フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>予約チャネル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNameCal__c</fullName>
        <formula>contactRef__r.FirstName + &apos; &apos; + contactRef__r.LastName</formula>
        <label>顧客名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartureDate__c</fullName>
        <label>出発日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DepartureTime__c</fullName>
        <defaultValue>&apos;10:00&apos;</defaultValue>
        <label>出発時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntryDate__c</fullName>
        <label>到着日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EntryTime__c</fullName>
        <defaultValue>&apos;15:00&apos;</defaultValue>
        <description>HH:MM</description>
        <label>到着時刻</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <defaultValue>&quot;FromUI&quot;</defaultValue>
        <label>発生源</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtraBedChk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>エキストラベッド(E/B)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>外部システム連携用キー</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadNo__c</fullName>
        <externalId>true</externalId>
        <label>予約番号</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nights__c</fullName>
        <label>宿泊数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentLeadIndxRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親予約インデックス</label>
        <referenceTo>LeadIndex__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>ParentLeadIndxRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlanRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プラン</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexSubPlanRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexSubRoomTypeRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rooms__c</fullName>
        <label>部屋数</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <label>売価</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>セグメント</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>状態</label>
        <picklist>
            <picklistValues>
                <fullName>通常</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>キャンセル</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StayPersons__c</fullName>
        <label>部屋人数</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contactRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>お客様</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>予約インデックス</relationshipLabel>
        <relationshipName>IndexContactRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>予約インデックス</label>
    <nameField>
        <displayFormat>I_{YYYY}_{0000000000}</displayFormat>
        <label>予約名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>